kattistestdebug
-------------------------- Pass test 1 --------------- SENASTE
INFO: Testing 'lab2::Date*'...
1: k_time-construct gregorian $B 367758793
2: add_year  $B  18
3: d+= $B 18
4: add_month $B  18
5: d-= $B 18
6: d+= $B -18
7: add_year  $B -18
8: d-= $B -18
9: ++d $B
10: add_month $B -18
11: --d $B
12: dump-info $B
13: add_year  $B  18
14: d+= $B 18
15: add_month $B  18
16: d-= $B 18
17: d+= $B -18
18: add_year  $B -18
19: d-= $B -18
20: ++d $B
21: add_month $B -18
22: --d $B
23: dump-info $B
24: add_year  $B  17
25: d+= $B 17
26: add_month $B  17
27: d-= $B 17
28: d+= $B -17
29: add_year  $B -17
30: d-= $B -17
31: ++d $B
32: add_month $B -17
33: --d $B
34: dump-info $B
35: ymd-construct julian $C 2097 2 15
36: add_year  $C  16
37: d+= $C 16
38: add_month $C  16
39: d-= $C 16
40: d+= $C -16
41: add_year  $C -16
42: d-= $C -16
43: ++d $C
44: add_month $C -16
45: --d $C
46: dump-info $C
47: add_year  $C  18
48: d+= $C 18
49: add_month $C  18
50: d-= $C 18
51: d+= $C -18
52: add_year  $C -18
53: d-= $C -18
54: ++d $C
55: add_month $C -18
56: --d $C
57: dump-info $C
58: add_year  $C  8
59: d+= $C 8
60: add_month $C  8
61: d-= $C 8
62: d+= $C -8
63: add_year  $C -8
64: d-= $C -8
65: ++d $C
66: add_month $C -8
67: --d $C
68: dump-info $C
69: copy-assign $C $B

  ^ error detected while evaluating the above

$B => '2097-02-20, mod_julian_day() = 87037' should have been '2097-03-05, mod_julian_day() = 87037'

----------- test_kattis2() ----------------
INFO: Testing 'lab2::Julian'...
1: k_time-construct $B 2038648393

  ^ error detected while evaluating the above

$B => '2034-08-08, mod_julian_day() = 64195' should have been '2034-07-26, mod_julian_day() = 64182'
$B => '2034-08-08, mod_julian_day() = 64195' should have been '2034-07-26, mod_julian_day() = 64182'
------------ test_kattis1() --------------
1: ymd-construct $A 2140 8 9
2: add_year  $A  18
3: d+= $A 18
4: add_month $A  18
5: d-= $A 18
6: d+= $A -18
7: add_year  $A -18
8: d-= $A -18
9: ++d $A
10: add_month $A -18
11: --d $A
12: dump-info $A
13: add_year  $A  5
14: d+= $A 5
15: add_month $A  5
16: d-= $A 5
17: d+= $A -5
18: add_year  $A -5
19: d-= $A -5
20: ++d $A
21: add_month $A -5
22: --d $A
23: dump-info $A
24: add_year  $A  17
25: d+= $A 17
26: add_month $A  17
27: d-= $A 17
28: d+= $A -17
------------------------------------------------------------------
INFO: Testing 'lab2::Julian'...
 * missing/invalid postfix increment: date++ should yield an rvalue
 * missing/invalid postfix increment: date-- should yield an rvalue
 * missing/invalid prefix increment: ++date should yield an lvalue
 * missing/invalid prefix increment: --date should yield an lvalue
 * missing/invalid `some_date += n`
 * missing/invalid `some_date -= n`
 * missing/invalid `int x = date_a - date_b`
 * missing/invalid member-function `mod_julian_day () const`
 * missing/invalid member-function `days_per_week () const
 * missing/invalid member-function `days_this_month () const
 * missing/invalid member-function `week_day_name () const`
 * missing/invalid member-function `month_name () const`
---------------------------------------------------------------------
In file included from test_entry.hpp:8:0,
                 from runner.cpp:1:
interpreter.hpp: In instantiation of the_date_interpreter<T, Julian, Gregorian>::the_date_interpreter(const natch::basic_environment&) [with T = lab2::Julian; Julian = lab2::Julian; Gregorian = lab2::Gregorian]::__lambda21:
interpreter.hpp:74:25:   required from struct the_date_interpreter<T, Julian, Gregorian>::the_date_interpreter(const natch::basic_environment&) [with T = lab2::Julian; Julian = lab2::Julian; Gregorian = lab2::Gregorian]::__lambda21
interpreter.hpp:103:8:   required from the_date_interpreter<T, Julian, Gregorian>::the_date_interpreter(const natch::basic_environment&) [with T = lab2::Julian; Julian = lab2::Julian; Gregorian = lab2::Gregorian]
interpreter.hpp:162:18:   required from the_date_specific_interpreter<T, Julian, Gregorian>::the_date_specific_interpreter(const natch::basic_environment&) [with T = lab2::Julian; Julian = lab2::Julian; Gregorian = lab2::Gregorian]
test_entry.hpp:99:78:   required from here
interpreter.hpp:81:11: error: passing const lab2::Julian as this argument of virtual unsigned int lab2::Date::week_day() discards qualifiers [-fpermissive]
           env.output ("week_day", src->week_day ());
           ^
interpreter.hpp:105: confused by earlier errors, bailing out
Preprocessed source stored into ./ccxsctn2.out file, please attach this to your bugreport.
Exited with error status 1
